refactor security